manifests/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app: registry
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
    - name: http
      port: 5000
      targetPort: http
